Authors and License

--- a/New/InitializeVistA.html
+++ b/New/InitializeVistA.html
@@ -47,6 +47,10 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </head>
 <body>
 <h1 id="vista-initialization">VistA Initialization</h1>
+<p>Authors: Sam Habiel</p>
+<p>License:</p>
+<p><a href="http://creativecommons.org/licenses/by/4.0/"><img src="https://i.creativecommons.org/l/by/4.0/80x15.png" alt="image" /></a></p>
+<p>Attributions: Original instructions by Fil Beza and Nancy Anthracite; this set has been updated by Sam Habiel. Last updated in December 2016.</p>
 <p>If you have reached this point, it means that you have finished <a href="./InstallCache.html">Install Cache</a>; or <a href="./InstallGTM.html">Install GT.M</a> and <a href="./InstallVistAOnGTM.html">Install VistA on GT.M</a>.</p>
 <h2 id="getting-into-the-direct-mode-aka-programmer-mode">Getting into the Direct Mode (aka) Programmer Mode</h2>
 <p>Before there were <a href="https://en.wikipedia.org/wiki/Read%E2%80%93eval%E2%80%93print_loop">REPLs</a>, Mumps always has had something called Direct Mode, which is a simplified REPL. It's also known as Programmer Mode. Normally, end users are not allowed to access Programmer Mode, as it is essentially like running as root on a Unix System.</p>
@@ -242,7 +246,7 @@ SUBTYPE: P-OTHER                      TYPE: HOST FILE SERVER</code></pre>
 <p>You need to select it and change the settings as follows:</p>
 <ul>
 <li>NAME = HFS</li>
-<li>$I = /tmp/hfs.dat or /dev/shm/hfs.dat or d:hfs, depending on your operating system (All Unices has /tmp/; only Linux has /dev/shm; last one is an example on Windows)</li>
+<li>$I = /tmp/hfs.dat or /dev/shm/hfs.dat or d:\hfs\, depending on your operating system (All Unices has /tmp/; only Linux has /dev/shm; last one is an example on Windows)</li>
 <li>ASK DEVICE = YES</li>
 <li>ASK PARAMETERS = @ (Delete it)</li>
 <li>LOCATION OF TERMINAL = Host File Server</li>
