--- a/New/InstallCache.html
+++ b/New/InstallCache.html
@@ -12,10 +12,13 @@
 <header>
 <h1 class="title">Installing Caché</h1>
 </header>
+<p>Authors: Joseph Snyder, Sam Habiel</p>
+<p>License:</p>
+<p><a href="http://creativecommons.org/licenses/by/4.0/"><img src="https://i.creativecommons.org/l/by/4.0/80x15.png" alt="image" /></a></p>
 <p>The following instructions were adapted from Nancy Anthracite's document entitled <a href="http://opensourcevista.net:8888/NancysVistAServer/InstallingVistAWithSingleUserVersionCache5.2.doc">InstallingVistAWithSingleUserVersionCache5.2</a>, which was created to guide a user through installing InterSystems Caché onto a Windows operating system. The instructions were using an older version of Caché; this uses the Caché 2015 version and the and shows the updated Management Portal interface.</p>
 <p>Trial versions of the Caché installer can be downloaded from</p>
 <blockquote>
-<p><a href="http://download.intersystems.com/download/register.csp">http://download.intersystems.com/download/register.csp</a>.</p>
+<p><a href="http://download.intersystems.com/download/register.csp" class="uri">http://download.intersystems.com/download/register.csp</a>.</p>
 </blockquote>
 <p>This installation guide uses Caché 2011.1, it should also apply for Cache 2013 to 2016. If you already have a Caché installation and are looking to install VistA as an additional database, you do not have to re-install Caché. Please use your existing installation and pick up the instructions at the point where the folder is created within the mgr folder.</p>
 <h1 id="download-and-install-caché-on-microsoft-windows">Download and Install Caché on Microsoft Windows</h1>
@@ -74,7 +77,7 @@
 <figure>
 <img src="images/InstallCache/MgrFldrVistA.png" />
 </figure>
-<p>At this point we are ready to stand up the VistA instance. Right click on the Caché cube and select Management Portal of Caché. On macOS and on Linux, the URL is <a href="http://localhost:57772/csp/sys/UtilHome.csp">http://localhost:57772/csp/sys/UtilHome.csp</a>.</p>
+<p>At this point we are ready to stand up the VistA instance. Right click on the Caché cube and select Management Portal of Caché. On macOS and on Linux, the URL is <a href="http://localhost:57772/csp/sys/UtilHome.csp" class="uri">http://localhost:57772/csp/sys/UtilHome.csp</a>.</p>
 <figure>
 <img src="images/InstallCache/MenuSysMgt.png" />
 </figure>
@@ -129,13 +132,13 @@
 </figure>
 <p>First set the Global Database location to the VistA database name, and for the Global Name enter &quot;%Z*&quot;. This will map all globals that start with &quot;%Z&quot; to be specific to the VistA namespace. Click OK and the wizard will exit and display the new mapping in the window. Repeat this for %ut and %Serenj*</p>
 <p>Repeat this for the following, but with different settings: The global database location is &quot;CACHETEMP&quot;, and the Global Names are the following:</p>
-<table>
+<table style="width:14%;">
 <colgroup>
 <col style="width: 13%" />
 </colgroup>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;"><p>HLTMP</p>
+<td><p>HLTMP</p>
 <p>TMP</p>
 <p>UTILITY</p>
 <p>XTMP</p>
@@ -161,13 +164,13 @@
 <img src="images/InstallCache/SetRoutineMapping.png" />
 </figure>
 <p>There are 8 other mappings that need to be entered in the same manner -</p>
-<table>
+<table style="width:11%;">
 <colgroup>
 <col style="width: 11%" />
 </colgroup>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;"><p>%DTC</p>
+<td><p>%DTC</p>
 <p>%RCR</p>
 <p>%XUCI</p>
 <p>%Z*</p>
@@ -200,7 +203,7 @@
 <img src="images/InstallCache/TelnetServiceEnabled.png" />
 </figure>
 <h1 id="install-cache.dat">Install CACHE.DAT</h1>
-<p>Download the CACHE.DAT from <a href="http://foia-vista.osehra.org/DBA_VistA_FOIA_System_Files/">http://foia-vista.osehra.org/DBA_VistA_FOIA_System_Files/</a>.</p>
+<p>Download the CACHE.DAT from <a href="http://foia-vista.osehra.org/DBA_VistA_FOIA_System_Files/" class="uri">http://foia-vista.osehra.org/DBA_VistA_FOIA_System_Files/</a>.</p>
 <p>The first step in installing the CACHE.DAT is to stop the Caché instance so that the instance will not clobber a process during the copy.</p>
 <p>Right click on the Caché Cube in the taskbar</p>
 <figure>
