--- a/New/InstallVistAOnGTM.html
+++ b/New/InstallVistAOnGTM.html
@@ -12,6 +12,9 @@
 <header>
 <h1 class="title">Download VistA for GT.M</h1>
 </header>
+<p>Authors: Sam Habiel</p>
+<p>License:</p>
+<p><a href="http://creativecommons.org/licenses/by/4.0/"><img src="https://i.creativecommons.org/l/by/4.0/80x15.png" alt="image" /></a></p>
 <p>A Mumps database (like VistA) is a series of routines and globals (a global in Mumps really means a file on disk). To load VistA into GT.M, you need to obtain the these from the CACHE.DAT distribued by the VA. Efforts are underway to lobby the VA to distribute the FOIA instance as a set of globals and routines; rather than in a proprietary format.</p>
 <p>Since the establishment of OSEHRA, each update monthly update of FOIA is exported as routines and globals in zwrite format at <a href="https://github.com/OSEHRA/VistA-M">Github</a>. In addition, DSS vxVistA can be obtained from <a href="https://github.com/OSEHRA/vxVistA-M">this repository</a> and WorldVistA can be obtained from <a href="https://github.com/glilly/wvehr2-dewdrop">this repository</a>.</p>
 <p>In our example, for setting up a VistA Database, we will use FOIA VistA.</p>
