--- a/New/InstallGTM.html
+++ b/New/InstallGTM.html
@@ -12,6 +12,9 @@
 <header>
 <h1 class="title">Download and Install GT.M</h1>
 </header>
+<p>Authors: KS Bhaskar</p>
+<p>License:</p>
+<p><a href="http://creativecommons.org/licenses/by/4.0/"><img src="https://i.creativecommons.org/l/by/4.0/80x15.png" alt="image" /></a></p>
 <p>The instructions are taken from the <a href="https://sourceforge.net/projects/fis-gtm/files/GT.M%20Acculturation%20Workshop/">GT.M Acculturation Workshop</a>. They have been only slightly modified.</p>
 <h1 id="using-the-package-manager">Using the Package Manager</h1>
 <p>If you are using Ubuntu Linux 14.04 LTS or later; or Debian Jessie, Testing, or Unstable; or other Linux distributions that may already have GT.M packages accessed using their normal package managers, you may be able to install GT.M using the package manager, e.g., as root/via sudo, <code>apt install fis-gtm</code>.</p>
