--- a/New/InstallVistAOnGTM.html
+++ b/New/InstallVistAOnGTM.html
@@ -15,7 +15,7 @@
 <p>Authors: Sam Habiel</p>
 <p>License:</p>
 <p><a href="http://creativecommons.org/licenses/by/4.0/"><img src="https://i.creativecommons.org/l/by/4.0/80x15.png" alt="image" /></a></p>
-<p>A Mumps database (like VistA) is a series of routines and globals (a global in Mumps really means a file on disk). To load VistA into GT.M, you need to obtain the these from the CACHE.DAT distribued by the VA. Efforts are underway to lobby the VA to distribute the FOIA instance as a set of globals and routines; rather than in a proprietary format.</p>
+<p>A Mumps database (like VistA) is a series of routines and globals (a global in Mumps really means a file on disk). To load VistA into GT.M, you need to obtain the these from the CACHE.DAT distributed by the VA. Efforts are underway to lobby the VA to distribute the FOIA instance as a set of globals and routines; rather than in a proprietary format.</p>
 <p>Since the establishment of OSEHRA, each update monthly update of FOIA is exported as routines and globals in zwrite format at <a href="https://github.com/OSEHRA/VistA-M">Github</a>. In addition, DSS vxVistA can be obtained from <a href="https://github.com/OSEHRA/vxVistA-M">this repository</a> and WorldVistA can be obtained from <a href="https://github.com/glilly/wvehr2-dewdrop">this repository</a>.</p>
 <p>In our example, for setting up a VistA Database, we will use FOIA VistA.</p>
 <p>Before downloading VistA, we will start by creating an empty database.</p>
@@ -61,7 +61,7 @@ export gtmroutines="${vista_home}/o*(${vista_home}/r) $gtm_dist/libgtmutil.so"
 # Allow relink of routine even if it is on the stack
 export gtm_link="RECURSIVE"
 
-# Adjust QUIT behavior to accomodate Cache bug/feature of 
+# Adjust QUIT behavior to accommodate Cache bug/feature of 
 # C style function/procedure unification rather than M/Pascal style 
 # function/procedure dichotomy
 export gtm_zquit_anyway=1
@@ -83,7 +83,7 @@ export gtm_side_effects=1
 export gtm_boolean=1
 
 # $SYSTEM Output to use to identify the box the system is running on
-export gtm_sysid="foia.2016.08.memphis.smh101.com"
+export gtm_sysid="foia.2016.08"
 
 # This is for journaling. Don't turn this on yet.
 #if [ -f j/mumps.mjl ]
@@ -302,11 +302,11 @@ Total of 0 routines.
 Routine: <strong>&lt;enter&gt;</strong></code></div>
 <p>It's common with all Unix software relying on POSIX/SysV Shared Memory to report errors with <code>shmget()</code>. If you see that when you are trying to run ^%GD, you need to increase your shared memory limits. I will leave you to google that on your own.</p>
 <h1 id="loading-vista-into-the-gt.m-database-we-just-created">Loading VistA Into the GT.M Database we just Created</h1>
-<p>I said we will use FOIA VistA. Make sure that git is installed on your machine, and then run the following command (this command may take up to 1 hour to run, based on your internet connection).</p>
+<p>I said we will use FOIA VistA. Make sure that git is installed on your machine, and then run the following command (this command may take up to 1 hour to run, based on your Internet connection).</p>
 <div class="code"><code>$ <strong>git clone -b foia --single-branch --depth=1 https://github.com/OSEHRA/VistA-M.git</strong></code></div>
 <p>Next we need to copy the routines to VistA (takes about 30 seconds). There are quotes around the <code>{}</code> because the paths contain spaces.</p>
 <div class="code"><code>$ <strong>find VistA-M -name '*.m' -exec cp "{}" r/ \;</strong></code></div>
-<p>Next we need to load the globals. We use the versatile <code>mupip load</code> command for that. Note that mupip load wants quotes sent down from the shell for any paths that contain spaces; and these do. Again, we tee our output because there is so much of it and because we need to visually inspect that everything got loaded.</p>
+<p>Next we need to load the globals. We use the versatile <code>mupip load</code> command for that. Note that mupip load wants quotes sent down from the shell for any paths that contain spaces; and these do. Again, we tee our output because there is so much of it and because we need to visually inspect that everything got loaded. This takes time; from 10 minutes up to 30 minutes.</p>
 <div class="code"><code>$ <strong>find VistA-M -name '*.zwr' -exec echo {} \; -exec mupip load \"{}\" \; |& tee g/foia201608-load.log</strong></code></div>
 <p>Verify that none of the globals failed to import.</p>
 <div class="code"><code>$ <strong>fgrep '%GTM' g/foia201608-load.log | wc -l</strong></code></div>
