--- a/PROJECTSmain.html
+++ b/PROJECTSmain.html
@@ -68,7 +68,7 @@ content="text/html; charset=iso-8859-1">
             installing VistA's <a href="../apps/APPSmain.html#Installation">Platinum</a>* 
             account on Graystone Technology Mumps (GT.M) and Intersystems Cach&eacute; MUMPS server and 
             getting to the point of the functioning Broker.</p>
-            <p align="left">These instructions were updated in 2016. The old instructions are from 2004-2006. They are left here for reference.</p>
+            <p align="left">These instructions were updated in 2016.  <a href="https://www.osehra.org">OSEHRA</a> has funded a part of the update. The old instructions are from 2004-2006. They are left here for reference.</p>
             <h3>New Instructions (2016)</h3>
             <p>If you will use Cach&eacute;, follow step 1 and then step 4. If you have GT.M, follow steps 2-4</p>
             <p>New instructions written and edited by Sam Habiel. Other authors whose work was copied and edited
