--- a/PROJECTSmain.html
+++ b/PROJECTSmain.html
@@ -66,17 +66,17 @@ content="text/html; charset=iso-8859-1">
             <h2 id="Installing_VistA">Installing VistA</h2>
             <p>This documentation project presents chapters in a list of steps for 
             installing VistA's <a href="../apps/APPSmain.html#Installation">Platinum</a>* 
-            account on Graystone Technology Mumps (GT.M) and Intersystems Cach&eacute; MUMPS server and 
+            account on Graystone Technology Mumps (GT.M)/YottaDB and Intersystems Cach&eacute; MUMPS server and 
             getting to the point of the functioning Broker.</p>
-            <p align="left">These instructions were updated in 2016.  <a href="https://www.osehra.org">OSEHRA</a> has funded a part of the update. The old instructions are from 2004-2006. They are left here for reference.</p>
-            <h3>New Instructions (2016)</h3>
-            <p>If you will use Cach&eacute;, follow step 1 and then step 4. If you have GT.M, follow steps 2-4</p>
+            <p align="left">These instructions were updated in 2016, and 2018.  <a href="https://www.osehra.org">OSEHRA</a> has funded a part of the update. The old instructions are from 2004-2006. They are left here for reference.</p>
+            <h3>New Instructions (2016-2018)</h3>
+            <p>If you will use Cach&eacute;, follow step 1 and then step 4. If you have GT.M/YottaDB follow steps 2-4</p>
             <p>New instructions written and edited by Sam Habiel. Other authors whose work was copied and edited
             are noted at the top of each document.</p>
             <ul>
                 <li><strong><a href="New/InstallCache.html">1. Install Cach&eacute; and VistA on Cach&eacute;</a></strong></li>
-                <li><strong><a href="New/InstallGTM.html">2. Install GT.M</a></strong></li>
-                <li><strong><a href="New/InstallVistAOnGTM.html">3. Install VistA on GT.M</a></strong></li>
+                <li><strong><a href="New/InstallGTM.html">2. Install GT.M or YottaDB</a></strong></li>
+                <li><strong><a href="New/InstallVistAOnGTM.html">3. Install VistA on GT.M or YottaDB</a></strong></li>
                 <li><strong><a href="New/InitializeVistA.html">4. Configure VistA</a></strong></li>
             </ul>
             <p>If you find any mistakes, you can fix them by forking <a href="https://github.com/shabiel/hardhats-vista-install-doc">https://github.com/shabiel/hardhats-vista-install-doc</a>,
