--- a/PROJECTSmain.html
+++ b/PROJECTSmain.html
@@ -66,9 +66,8 @@ content="text/html; charset=iso-8859-1">
             <h2 id="Installing_VistA">Installing VistA</h2>
             <p>This documentation project presents chapters in a list of steps for 
             installing VistA's <a href="../apps/APPSmain.html#Installation">Platinum</a>* 
-            account on Graystone Technology Mumps (GT.M)/YottaDB and Intersystems Cach&eacute; MUMPS server and 
-            getting to the point of the functioning Broker.</p>
-            <p align="left">These instructions were updated in 2016, and 2018.  <a href="https://www.osehra.org">OSEHRA</a> has funded a part of the update. The old instructions are from 2004-2006. They are left here for reference.</p>
+            account on Graystone Technology Mumps (GT.M)/YottaDB or Intersystems Cach&eacute; MUMPS server, to the point of the functioning Broker.</p>
+            <p align="left">These instructions were updated in 2016 and 2018.  <a href="https://www.osehra.org">OSEHRA</a> has funded a part of the update. The old instructions (2004-2006) have been left here for reference.</p>
             <h3>New Instructions (2016-2018)</h3>
             <p>If you will use Cach&eacute;, follow step 1 and then step 4. If you have GT.M/YottaDB follow steps 2-4</p>
             <p>New instructions written and edited by Sam Habiel. Other authors whose work was copied and edited
@@ -82,7 +81,7 @@ content="text/html; charset=iso-8859-1">
             <p>If you find any mistakes, you can fix them by forking <a href="https://github.com/shabiel/hardhats-vista-install-doc">https://github.com/shabiel/hardhats-vista-install-doc</a>,
             making the correction, and then sending in a pull request.</p>
             <h3>Old Instructions (2004-2006)</h3>
-            <p>Original Insturctions written and edited by Nancy Anthracite and Fil Beza</p>
+            <p>Original Instructions written and edited by Nancy Anthracite and Fil Beza</p>
             <ul>
               <li><strong><a href="Old/VistA_Install/Vista_Install.html">Chapter 1: Starting Cach&eacute;, FileMan, TaskMan, Mailman and Broker</a></strong></li>
               <li><strong><a href="Old/VistA_Install/CPRSStart12.html">Chapter 2: Starting CPRS</a></strong></li>
@@ -94,7 +93,7 @@ content="text/html; charset=iso-8859-1">
       <p> The Diamond download is a MUMPS account that has been pre-installed 
             with the VistA Infrastructure (Fileman, Kernel, etc.) along with some 
             useful tools, such as VPE. While it is not the complete the installation 
-            of VistA clinical applications, it is useful for learnng the VistA 
+            of VistA clinical applications, it is useful for learning the VistA 
             Infrastructure and developing applications. Don't think that these 
             applications must be clinical. The Infrastructure is useful for any 
             database applications (shipping, inventory, sales management, etc.)</p>
