Cache pages mappings clarified based on feedback from Nancy Anthracite; tyop fixes

--- a/New/InstallCache.html
+++ b/New/InstallCache.html
@@ -18,7 +18,7 @@
 <p>The following instructions were adapted from Nancy Anthracite's document entitled <a href="http://opensourcevista.net:8888/NancysVistAServer/InstallingVistAWithSingleUserVersionCache5.2.doc">InstallingVistAWithSingleUserVersionCache5.2</a>, which was created to guide a user through installing InterSystems Caché onto a Windows operating system. The instructions were using an older version of Caché; this uses the Caché 2015 version and the and shows the updated Management Portal interface.</p>
 <p>Trial versions of the Caché installer can be downloaded from</p>
 <blockquote>
-<p><a href="http://download.intersystems.com/download/register.csp">http://download.intersystems.com/download/register.csp</a>.</p>
+<p><a href="http://download.intersystems.com/download/register.csp" class="uri">http://download.intersystems.com/download/register.csp</a>.</p>
 </blockquote>
 <p>This installation guide uses Caché 2011.1, it should also apply for Cache 2013 to 2016. If you already have a Caché installation and are looking to install VistA as an additional database, you do not have to re-install Caché. Please use your existing installation and pick up the instructions at the point where the folder is created within the mgr folder.</p>
 <h1 id="download-and-install-caché-on-microsoft-windows">Download and Install Caché on Microsoft Windows</h1>
@@ -77,7 +77,7 @@
 <figure>
 <img src="images/InstallCache/MgrFldrVistA.png" />
 </figure>
-<p>At this point we are ready to stand up the VistA instance. Right click on the Caché cube and select Management Portal of Caché. On macOS and on Linux, the URL is <a href="http://localhost:57772/csp/sys/UtilHome.csp">http://localhost:57772/csp/sys/UtilHome.csp</a>.</p>
+<p>At this point we are ready to stand up the VistA instance. Right click on the Caché cube and select Management Portal of Caché. On macOS and on Linux, the URL is <a href="http://localhost:57772/csp/sys/UtilHome.csp" class="uri">http://localhost:57772/csp/sys/UtilHome.csp</a>.</p>
 <figure>
 <img src="images/InstallCache/MenuSysMgt.png" />
 </figure>
@@ -130,9 +130,9 @@
 <figure>
 <img src="images/InstallCache/NewGlobalMapping.png" />
 </figure>
-<p>First set the Global Database location to the VistA database name, and for the Global Name enter &quot;%Z*&quot;. This will map all globals that start with &quot;%Z&quot; to be specific to the VistA namespace. Click OK and the wizard will exit and display the new mapping in the window. Repeat this for %ut and %Serenj*</p>
+<p>First set the Global Database location to the VistA database name, and for the Global Name enter &quot;%Z*&quot;. This will map all globals that start with &quot;%Z&quot; away from the %SYS namespace to the VistA namespace. Click OK and the wizard will exit and display the new mapping in the window. Repeat this for %ut and %Serenj*</p>
 <p>Repeat this for the following, but with different settings: The global database location is &quot;CACHETEMP&quot;, and the Global Names are the following:</p>
-<table>
+<table style="width:14%;">
 <colgroup>
 <col style="width: 13%" />
 </colgroup>
@@ -147,6 +147,53 @@
 </tbody>
 </table>
 <p>This is necessary to do to speed the performance of any temporary globals which are very frequently used. The CACHETEMP database is memory mapped for speed.</p>
+<p>In the end, you should have these mappings set-up:</p>
+<table style="width:42%;">
+<colgroup>
+<col style="width: 13%" />
+<col style="width: 27%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: left;">Global</th>
+<th style="text-align: left;">Mapped Location</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">%Z*</td>
+<td style="text-align: left;">&lt;VISTA DB NAMESPACE&gt;</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">%ut</td>
+<td style="text-align: left;">&lt;VISTA DB NAMESPACE&gt;</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">%Serenj*</td>
+<td style="text-align: left;">&lt;VISTA DB NAMESPACE&gt;</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">HLTMP</td>
+<td style="text-align: left;">CACHETEMP</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">TMP</td>
+<td style="text-align: left;">CACHETEMP</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">UTILITY</td>
+<td style="text-align: left;">CACHETEMP</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">XTMP</td>
+<td style="text-align: left;">CACHETEMP</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">XUTL</td>
+<td style="text-align: left;">CACHETEMP</td>
+</tr>
+</tbody>
+</table>
 <p>Be sure to click on Save Changes before navigating back to the Namespaces page. This is what you will see. (Your database name may differ.)</p>
 <figure>
 <img src="images/InstallCache/SaveGlobalMapping.png" />
@@ -159,18 +206,18 @@
 <figure>
 <img src="images/InstallCache/NewRoutineMapping.png" />
 </figure>
-<p>Again select the database location that corresponds to the VistA database, enter &quot;%DT&quot; into the Routine name, and click Apply. This adds the first namespace mapping to the VistA database.</p>
+<p>Again select the database location that corresponds to the VistA database, enter &quot;%DT*&quot; into the Routine name, and click Apply. This adds the first namespace mapping to the VistA database.</p>
 <figure>
 <img src="images/InstallCache/SetRoutineMapping.png" />
 </figure>
-<p>There are 8 other mappings that need to be entered in the same manner -</p>
-<table>
+<p>There are 7 other mappings that need to be entered in the same manner. You should have these mappings in the end:</p>
+<table style="width:11%;">
 <colgroup>
 <col style="width: 11%" />
 </colgroup>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;"><p>%DTC</p>
+<td style="text-align: left;"><p>%DT*</p>
 <p>%RCR</p>
 <p>%XUCI</p>
 <p>%Z*</p>
@@ -181,7 +228,7 @@
 </tr>
 </tbody>
 </table>
-<p>After the final mapping is set, click OK to be sent back to the Routine Mapping page. You should now see the nine mappings listed on the page. Click on the Save Changes button.</p>
+<p>After the final mapping is set, click OK to be sent back to the Routine Mapping page. You should now see the eight mappings listed on the page. Click on the Save Changes button.</p>
 <figure>
 <img src="images/InstallCache/SaveRoutineMapping.png" />
 </figure>
@@ -203,7 +250,7 @@
 <img src="images/InstallCache/TelnetServiceEnabled.png" />
 </figure>
 <h1 id="install-cache.dat">Install CACHE.DAT</h1>
-<p>Download the CACHE.DAT from <a href="http://foia-vista.osehra.org/DBA_VistA_FOIA_System_Files/">http://foia-vista.osehra.org/DBA_VistA_FOIA_System_Files/</a>.</p>
+<p>Download the CACHE.DAT from <a href="http://foia-vista.osehra.org/DBA_VistA_FOIA_System_Files/" class="uri">http://foia-vista.osehra.org/DBA_VistA_FOIA_System_Files/</a>.</p>
 <p>The first step in installing the CACHE.DAT is to stop the Caché instance so that the instance will not clobber a process during the copy.</p>
 <p>Right click on the Caché Cube in the taskbar</p>
 <figure>
