--- a/PROJECTSmain.html
+++ b/PROJECTSmain.html
@@ -69,7 +69,7 @@ content="text/html; charset=iso-8859-1">
             account on Graystone Technology Mumps (GT.M)/YottaDB or Intersystems Cach&eacute; MUMPS server, to the point of the functioning Broker.</p>
             <p align="left">These instructions were updated in 2016 and 2018.  <a href="https://www.osehra.org">OSEHRA</a> has funded a part of the update. The old instructions (2004-2006) have been left here for reference.</p>
             <h3>New Instructions (2016-2018)</h3>
-            <p>If you will use Cach&eacute;, follow step 1 and then step 4. If you have GT.M/YottaDB follow steps 2-4</p>
+            <p>If you will use Cach&eacute;, follow step 1 and then step 4 and following. If you have GT.M/YottaDB follow steps 2 and following.</p>
             <p>New instructions written and edited by Sam Habiel. Other authors whose work was copied and edited
             are noted at the top of each document.</p>
             <ul>
@@ -77,6 +77,7 @@ content="text/html; charset=iso-8859-1">
                 <li><strong><a href="New/InstallGTM.html">2. Install GT.M or YottaDB</a></strong></li>
                 <li><strong><a href="New/InstallVistAOnGTM.html">3. Install VistA on GT.M or YottaDB</a></strong></li>
                 <li><strong><a href="New/InitializeVistA.html">4. Configure VistA</a></strong></li>
+								<li><strong><a href="New/SetupClinics.html">5. Set-up Clinics</a></strong></li>
             </ul>
             <p>If you find any mistakes, you can fix them by forking <a href="https://github.com/shabiel/hardhats-vista-install-doc">https://github.com/shabiel/hardhats-vista-install-doc</a>,
             making the correction, and then sending in a pull request.</p>
