--- a/New/SetupClinics.html
+++ b/New/SetupClinics.html
@@ -24,7 +24,17 @@
 <figure>
 <img src="images/SetupClinics/new_encounter.png" class="align-center" />
 </figure>
-<p>We have users populated; but we do not have any clinics to choose for a visit location. In order for us to create a new clinic, we need to log-in as a system manager into the &quot;roll and scroll&quot; and set-up a new clinic. To get to the menu, you need to go from:</p>
+<p>We have users populated; but we do not have any clinics to choose for a visit location.</p>
+<p>Before we get started, we need to define what &quot;clinic&quot; means. It's not a physical building; nor it is a specific room or wing in a hospital. It really stands for an administrive unit in a specific speciality at which patients can be scheduled for appointments. &quot;Clinic&quot; in English also means the entire building in which these specialties are housed; but that's not what it means in VistA.</p>
+<p>Examples of VistA Clinics:</p>
+<ul>
+<li>Cardiology Clinic</li>
+<li>Dr. Boson's Clinic (single physician clinic)</li>
+<li>Dermatology Clinic</li>
+<li>Immunization Update Clinic</li>
+<li>Public Nurse Visits Clinic</li>
+</ul>
+<p>In order for us to create a new clinic, we need to log-in as a system manager into the &quot;roll and scroll&quot; and set-up a new clinic. To get to the menu, you need to go from:</p>
 <div class="code"><code>
  Core Applications &rarr; Scheduling Manager's Menu &rarr; Supervisor Menu &rarr; Set up a Clinic</code></div>
 <p>Here's a walk through the menu system showing you getting there:</p>
